# streamcorpus

./: .gitignore  Makefile  README.md  README.rst  release-steps.txt  setup.py
cpp/: README.md  streamcorpus_constants.cpp  streamcorpus_constants.h  streamcorpus_types.cpp  streamcorpus_types.h
examples/cpp/: CMakeLists.txt  README  annotation_example.cpp  filter-streamitems-make-reverse-index.py
examples/java/: AddTagging.java
examples/py/: example-streamcorpus-augmentor.py  example-streamcorpus-creator.py  iterating-over-tokens.py
examples/scala/: AddTagging.scala  Makefile  README.rst
if/: VERSION  html-v5-tags.py  html-v5-tags.thrift  streamcorpus-v0_1_0.thrift  streamcorpus-v0_2_0.thrift  streamcorpus-v0_3_0.thrift  streamcorpus.thrift
java/: Makefile  README.md
py/: MANIFEST.in  Makefile  README.rst  setup.py  version.py
scala/: Makefile  README.rst
scala/streamcorpus/: Annotator.scala  Attribute.scala  AttributeType.scala  ContentItem.scala  EntityType.scala  Gender.scala  Label.scala  Language.scala  MentionType.scala  Offset.scala  OffsetType.scala  Rating.scala  Relation.scala  RelationType.scala  Sentence.scala  StreamItem.scala  StreamTime.scala  Tagging.scala  Target.scala  Token.scala  Versions.scala
src/: streamcorpus.thrift
src/cpp/: CMakeLists.txt  streamcorpus_constants.h  streamcorpus_types.cpp
src/python/: Makefile  setup.py
src/scala/: README.rst
src/streamcorpus/: __init__.py  _chunk.py  constants.py  dump.py  test_chunk.py  ttypes.py  ttypes_v0_1_0.py
test-data/: john-smith-tagged-by-lingpipe-0.sc.xz
(+60 files in other folders)
